[workspace]
resolver = "2"
members = [
    "push-packet",
    "push-packet-common",
    "push-packet-ebpf", 
]
default-members = ["push-packet", "push-packet-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
which = { version = "6.0.0", default-features = false }
ipnet = {version= "2.12.0", default-features = false}
thiserror = {version="2.0.18", default-features = false}
nix = {version="0.31.2", default-features = false}

[profile.release.package.push-packet-ebpf]
debug = 2
codegen-units = 1


[profile.release]
lto = true
