[workspace]
resolver = "2"
members = [
    "push-packet",
    "push-packet-common",
    "push-packet-ebpf", 
]
default-members = ["push-packet", "push-packet-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
version= "0.1.0"

[workspace.dependencies]
aya = { version="0.13.1", default-features = false }
aya-build = { version="0.1.3", default-features = false }
aya-ebpf = { version="0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.1", default-features = false }
which = { version = "6.0.3", default-features = false }
ipnet = {version= "2.12.0", default-features = false}
thiserror = {version="2.0.18", default-features = false}
nix = {version="0.31.2", default-features = false}

[profile.release.package.push-packet-ebpf]
debug = 2
codegen-units = 1


[profile.release]
lto = true
