[package]
name = "push-packet-common"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
linear = []
user = ["aya", "ipnet"]

[dependencies]
aya = { workspace = true, optional = true }
ipnet = {workspace = true, optional = true}

[lib]
path = "src/lib.rs"
