[package]
name = "push-packet-common"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
description = "Internal shared types for push-packet."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
linear = []
user = ["aya", "ipnet"]

[dependencies]
aya = { workspace = true, optional = true }
ipnet = {workspace = true, optional = true}

[lib]
path = "src/lib.rs"
