[package]
name = "push-packet-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
push-packet-common = { path = "../push-packet-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "push-packet"
path = "src/main.rs"
