[package]
name = "push-packet-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
push-packet-common = { path = "../push-packet-common", features=["linear"] }

aya-ebpf = { workspace = true }
network-types = "0.1.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "linear"
path = "src/linear.rs"
