[package]
name = "push-packet-ebpf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Internal eBPF programs for push-packet."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
push-packet-common = { workspace = true, features = ["linear"] }

aya-ebpf = { workspace = true }
network-types = "0.1.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "linear"
path = "src/linear.rs"
